--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
 
 <head>
   <meta charset="utf-8">
@@ -11,6 +13,8 @@
         <span class="navbar-brand mb-0 h1">NY Times Search</span>
        </nav>
     <form>
+    <div class = "jumbotron">
+      <h1><i class="far fa-newspaper"></i>Search Parameters</h1>
         <div class="form-group">
           <label for="searchTerms">Search Term:</label>
           <input type="search" class="form-control" id="searchTerms" aria-describedby="search" placeholder="Search">
@@ -31,13 +35,16 @@
         <label for="records">End Year (Optional)</label>
         <input type="records" class="form-control" id="endYear">
       </div>
-        <button type="search" class=" search btn btn-primary">Search</button>
-        <button type="clearResults" class="btn btn-primary">Clear Results</button>
+        <button type="search" class=" search btn btn-secondary">
+            <i class="far fa-search"></i>Search</button>
+        <button type="clearResults" class="clear btn btn-secondary"><i class="fal fa-trash-alt"></i>Clear Results</button>
       </form>
+    </div>
       <div class="card">
           <div class="card-body">
-            Top Articles
+              <i class="far fa-newspaper"></i>Top Articles
           </div>
         </div>
+
 </body>
 </html>
