--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-
+    <link href="assets/css/style.css" rel="stylesheet">
 
 <head>
   <meta charset="utf-8">
@@ -44,6 +44,8 @@
               <i class="far fa-newspaper"></i>Top Articles
           </div>
         </div>
+  <script src="https://code.jquery.com/jquery.js"></script>
+   <script type="text/javascript" src="assets/javascript/app.js"></script>
 
 </body>
 </html>
