--- a/index.html
+++ b/index.html
@@ -1,49 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-  integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+   <link href="assets/css/style.css" rel="stylesheet">
 
 <head>
  <meta charset="utf-8">
  <title>NY Times</title>
 </head>
-
 <body>
-  <nav class="navbar navbar-light bg-light">
-    <span class="navbar-brand mb-0 h1">NY Times Search</span>
-  </nav>
-  <form>
-    <div class="form-group">
-      <label for="searchTerms">Search Term:</label>
-      <input type="search" class="form-control" id="searchTerms" aria-describedby="search" placeholder="Search">
-    </div>
-    <div class="form-group">
-      <label for="records">Number of Records to Retrieve</label>
-      <select class="form-control" id="exampleFormControlSelect1">
-        <option>1</option>
-        <option>5</option>
-        <option>10</option>
-      </select>
-    </div>
-    <div class="form-group form-check">
-      <label for="records">Start Year (Optional)</label>
-      <input type="records" class="form-control" id="startYear">
-    </div>
-    <div>
-      <label for="records">End Year (Optional)</label>
-      <input type="records" class="form-control" id="endYear">
-    </div>
-    <button type="submit" class=" search btn btn-primary" id="search">Search</button>
-    <button type="submit" class="btn btn-primary" id="clear">Clear Results</button>
-  </form>
-  <div class="card">
-    <div class="card-body" id="article-container">
-      Top Articles
-    </div>
-  </div>
+   <div class= "jumbotron" id=nav>
+       <div class="containter">
+         <h1 class="display-4"><i class="far fa-newspaper"></i> New York Times Search</h1>
+       </div>
+   </div>
+   <form>
+       <h4 id="searchParameters"><i class="far fa-newspaper"></i> Search Parameters</h4>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script type="text/javascript" src="./assets/javascript/app.js"></script>
+       <div class="form-group">
+         <label for="searchTerms">Search Term:</label>
+         <input type="search" class="form-control" id="searchTerms" aria-describedby="search" placeholder="Search">
+       </div>
+       <div class="form-group">
+         <label for="records">Number of Records to Retrieve</label>
+         <select class="form-control" id="exampleFormControlSelect1">
+             <option>1</option>
+             <option>5</option>
+             <option>10</option>
+           </select>
+       </div>
+     <div class="form-group form-check">
+       <label for="records">Start Year (Optional)</label>
+       <input type="records" class="form-control" id="startYear">
+     </div>
+     <div>
+       <label for="records">End Year (Optional)</label>
+       <input type="records" class="form-control" id="endYear">
+     </div>
+       <button type="search" class=" search btn btn-secondary">Search</button>
+       <button type="clearResults" class="clear btn btn-secondary">Clear Results</button>
+     </form>
+
+     <div class="container">
+     <h4><i class="far fa-newspaper"></i> Top Articles</h4>
+     <div class="card">
+         <div class="card-body">
+         </div>
+       </div>
+     </div>
+ <script src="https://code.jquery.com/jquery.js"></script>
+  <script type="text/javascript" src="assets/javascript/app.js"></script>
+
 </body>
-
 </html>
