Good html changes

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
        <label for="records">End Year (Optional)</label>
        <input type="records" class="form-control" id="endYear">
      </div>
-       <button type="search" class=" search btn btn-secondary">Search</button>
-       <button type="clearResults" class="clear btn btn-secondary">Clear Results</button>
+       <button type="search" id="search" class=" search btn btn-secondary">Search</button>
+       <button type="clearResults" id="clear" class="clear btn btn-secondary">Clear Results</button>
      </form>
 
      <div class="container">
